--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -1,4 +1,4 @@
-robot_num: 4
+robot_num: 2
 starts:
   - [4, 10]
   - [16, 10]
@@ -6,40 +6,32 @@ goals:
   - [16, 10]
   - [4, 10]
 robot_radii:
-  - 1.5
-  - 1.5
-  - 1.5
-  - 1.5
+  - 1.0
+  - 1.0
 width: 20
 height: 20
 lambda_factor: 0.5
 expand_distances:
-  - 3.0
-  - 3.0
-  - 3.0
-  - 3.0
+  - 1.5
+  - 1.5
 obstacles:
-  - type: CircleObstacle
-    x: 4
-    y: 4
-    radius: 4
-  - type: CircleObstacle
+  - type: RectangleObstacle
     x: 10
-    y: 6
-    radius: 2
-  - type: CircleObstacle
-    x: 16
     y: 4
-    radius: 4
-  - type: CircleObstacle
+    width: 20
+    height: 8
+  - type: RectangleObstacle
     x: 4
     y: 16
-    radius: 4
-  - type: CircleObstacle
+    width: 8
+    height: 8
+  - type: RectangleObstacle
     x: 10
     y: 18
-    radius: 2
-  - type: CircleObstacle
+    width: 4
+    height: 4
+  - type: RectangleObstacle
     x: 16
     y: 16
-    radius: 4
+    width: 8
+    height: 8
