--- a/configs/deadlock_config.yaml
+++ b/configs/deadlock_config.yaml
@@ -6,8 +6,8 @@ goals:
   - [16, 10]
   - [4, 10]
 robot_radii:
-  - 1.2
-  - 1.2
+  - 1.0
+  - 1.0
 width: 20
 height: 20
 lambda_factor: 0.5
@@ -16,23 +16,27 @@ expand_distances:
   - 3.0
   - 3.0
 obstacles:
-  - type: RectangleObstacle
-    x: 10
+  - type: CircleObstacle
+    x: 4
     y: 4
-    width: 20
-    height: 8
-  - type: RectangleObstacle
+    radius: 4
+  - type: CircleObstacle
+    x: 10
+    y: 6
+    radius: 2
+  - type: CircleObstacle
+    x: 16
+    y: 4
+    radius: 4
+  - type: CircleObstacle
     x: 4
     y: 16
-    width: 8
-    height: 8
-  - type: RectangleObstacle
+    radius: 4
+  - type: CircleObstacle
     x: 10
     y: 18
-    width: 4
-    height: 4
-  - type: RectangleObstacle
+    radius: 2
+  - type: CircleObstacle
     x: 16
     y: 16
-    width: 8
-    height: 8
+    radius: 4
