--- a/.gitignore
+++ b/.gitignore
@@ -239,4 +239,5 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
-solutions.yaml
+solutions2.yaml
+.idea
